--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ lazy_static = "1.5.0"
 once_cell = "1.21.3"
 paste = "1.0.15"
 anyhow = "1.0.98"
+graphile_worker_extensions = "0.1.5"
 
 [lib]
 name = "rbtrack"
