Implementing groups Tests passing

--- a/crates/rbtrack-node-api/Cargo.toml
+++ b/crates/rbtrack-node-api/Cargo.toml
@@ -8,8 +8,9 @@ uuid = { workspace = true }
 once_cell = { workspace = true }
 paste = { workspace = true }
 anyhow = { workspace = true }
-parking_lot = { workspace = true }
+parking_lot = { workspace = true, features = ["arc_lock"] }
 rbtrack-types = { path = "../rbtrack-types", features = ["opencv-types"] }
+petgraph = "0.8.2"
 
 [features]
 default = []
