--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ members = [
 
 [workspace.dependencies]
 # Pin shared versions here to avoid duplication
-uuid = { version = "1.17.0", features = ["v4"]}
+uuid = { version = "1.17.0", features = ["v4"] }
 once_cell = "1.21.3"
-egui ="0.31.1"
+egui ="0.32.0"
 serde = "1.0.219"
 petgraph = "0.8.1"
 variation = "0.1.1"
@@ -22,4 +22,4 @@ lazy_static = "1.5.0"
 paste = "1.0.15"
 anyhow = "1.0.98"
 graphile_worker_extensions = "0.1.5"
-parking_lot = "0.12.4"
+parking_lot = { version = "0.12.4", features = ["arc_lock"] }
