--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Install packages
+      run: apt update && apt install -y clang
     - name: Build
       run: cargo build --verbose
     - name: Run tests
