--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install packages
-      run: apt update && apt install -y clang rustup
+      run: apt update && apt install -y clang rustc cargo
     - name: Build
       run: cargo build --verbose
     - name: Run tests
