--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,8 +21,8 @@ jobs:
       run: apt update && apt install -y clang curl
     - name: Install rustup
       run: curl https://sh.rustup.rs -sSf | sh -s -- -y
-    - name: Update rustup
-      run: rustup update
+    # - name: Update rustup
+    #   run: rustup update
     - name: Build
       run: cargo build --verbose
     - name: Run tests
