--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,12 +21,10 @@ jobs:
       run: apt update && apt install -y clang curl
     - name: Install rustup
       run: curl https://sh.rustup.rs -sSf | sh -s -- -y
-    # - name: Update rustup
-    #   run: rustup update
     - name: Build
-      run: cargo build --verbose
+      run: source $HOME/.cargo/env && cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: source $HOME/.cargo/env && cargo test --verbose
 
   windows-build:
 
