--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,11 +12,15 @@ jobs:
   ubuntu-build:
 
     runs-on: ubuntu-latest
-    container: 
-      image: ubuntu:22.04
-
+        
     steps:
-    - uses: actions/checkout@v4
+    - name: Clone repo
+      uses: actions/checkout@v4
+    - name: Set up Clang
+      uses: egor-tensin/setup-clang@v1
+      with:
+        version: latest # Or a specific version like '14'
+        platform: x64 # Or 'x86' for 32-bit builds
     - name: Install packages
       run: apt update && apt install -y clang curl
     - name: Install rustup
@@ -31,7 +35,8 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Clone repo
+      uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
     - name: Run tests
