--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Clone repo
       uses: actions/checkout@v4
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y clang libclang-dev
+      run: sudo apt-get update && sudo apt-get install -y clang libclang-dev libopencv-dev pkg-config
     - name: Build
       run: cargo build --verbose
     - name: Run tests
