--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,8 +15,15 @@ jobs:
     steps:
     - name: Clone repo
       uses: actions/checkout@v4
-    - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y clang libclang-dev libopencv-dev pkg-config
+    - name: Cache APT packages
+      uses: awalsh128/cache-apt-pkgs-action@v1.4
+      with:
+        packages: |
+          clang
+          libclang-dev
+          libopencv-dev
+          pkg-config
+        version: v1.0 # Optional: Specify a version for cache invalidation
     - name: Build
       run: cargo build --verbose
     - name: Run tests
