--- a/crates/rbtrack-node-api/Cargo.toml
+++ b/crates/rbtrack-node-api/Cargo.toml
@@ -12,6 +12,7 @@ parking_lot = { workspace = true, features = ["arc_lock"] }
 rbtrack-types = { path = "../rbtrack-types", features = ["opencv-types"] }
 petgraph = "0.8.2"
 indexmap = "2.11.0"
+itertools = "0.14.0"
 
 [features]
 default = []
